# obligatorio2-sma-guerra-sanes

./: .gitignore  01_tictactoe.ipynb  02_nocca_nocca.ipynb  03_kuhn.ipynb  04_kuhn3p.ipynb  05_leduc.ipynb  README.md  create_venv.ps1  pyproject.toml  requirements.txt  utils.py
agents/: cfr.py  ismcts.py  mcts.py
games/: kuhn.py  kuhn3.py  leduc.py
games/nocca_nocca/: nocca_nocca.py
games/tictactoe/: tictactoe.py
