[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alternating-games"
version = "0.1.0"
description = "Obligatorio 2 - Sistemas Multiagente - Sanes & Guerra"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pettingzoo[classic]",
    "gymnasium",
    "ipykernel",
    "nbconvert",
    "notebook",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["base", "games", "games.*", "agents"]
